--- a/Draw/app/src/main/AndroidManifest.xml
+++ b/Draw/app/src/main/AndroidManifest.xml
@@ -20,13 +20,17 @@
         </receiver>
 
         <activity android:name=".screen2" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".ExampleWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
