--- a/Draw/app/src/main/AndroidManifest.xml
+++ b/Draw/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
 
 
-        <activity android:name=".screen2">
+        <activity android:name=".screen1">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +38,9 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".screen2"></activity>
     </application>
 
 </manifest>
