--- a/Draw/app/src/main/AndroidManifest.xml
+++ b/Draw/app/src/main/AndroidManifest.xml
@@ -18,13 +18,17 @@
             <!-- 위젯에서 수신할 action들 정의 -->
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.action.WIDGET_BUTTON"/>
             </intent-filter>
 
             <!-- 이 브로드캐스트 리시버가 위젯임을 명시 & 명세파일 위치 면시 -->
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
-        </receiver> <!-- 위젯 선언 끝 -->
+        </receiver>
+
+        <!-- 위젯 선언 끝 -->
+
         <activity android:name=".screen1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
