--- a/Draw/local.properties
+++ b/Draw/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 16 21:05:16 KST 2020
-sdk.dir=C\:\\Users\\JH\\AppData\\Local\\Android\\Sdk
+#Sun Feb 23 20:17:04 KST 2020
+sdk.dir=C\:\\Users\\yorco\\AppData\\Local\\Android\\Sdk
