--- a/Draw/local.properties
+++ b/Draw/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 01 20:11:49 KST 2020
-sdk.dir=C\:\\Users\\JH\\AppData\\Local\\Android\\Sdk
+#Thu Mar 12 21:56:53 KST 2020
+sdk.dir=C\:\\Users\\yorco\\AppData\\Local\\Android\\Sdk
