--- a/Draw/app/src/main/AndroidManifest.xml
+++ b/Draw/app/src/main/AndroidManifest.xml
@@ -28,15 +28,26 @@
 
         <!-- 위젯 선언 끝 -->
 
-        <activity android:name=".screen1">
+        <activity android:name=".screen1"/>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".screen2" />
+
+    <!-- 스플래시 액티비티 .-->
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".screen2" />
+
+
     </application>
 
 </manifest>
